src/test/compile-fail/bang-tailexpr.rs
fn f() -> ! {
    3i //~ ERROR expected `_|_` but found `int`
}
fn main() { }
